Update tags in SIFT AI post
Removed 'Critical Thinking' tag from the SIFT AI post.

--- a/_posts/2025-11-13-siftai.md
+++ b/_posts/2025-11-13-siftai.md
@@ -5,7 +5,7 @@ description: A new method focusing on a SIFT-like framework of “moves” aroun
 
 date:   2025-11-13
 image:  '/images/tore-f-iEkIBYpsBog-unsplash.jpg'
-tags:   [SIFT, AI, Critical Thinking]
+tags:   [SIFT, AI]
 featured: true
 ---
 > ...the core question of personal fact-checking as “Is this what people think it is?” There’s actually some deep epistemological insights under that shift, but the simplest way to conceptualize it is being misinformed (either by yourself or others) is not about the relation between something you are looking at and the truth. Being misinformed is usually about bad evidence. The most common pattern is this: without context something looks like good evidence of something. Once you have the context of that evidence it does not.
