Fix description formatting in SIFT for AI post

--- a/_posts/2025-11-13-siftai.md
+++ b/_posts/2025-11-13-siftai.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Critical Doing: SIFT for AI"
-description: A new method focusing on a SIFT-like framework of "moves" around AI and improving AI input through well-crafted, evidence-based follow up questions
+description: A new method focusing on a SIFT-like framework of moves around AI and improving AI input through well-crafted, evidence-based follow up questions
 date: 2024-11-13
 image: '/images/tore-f-iEkIBYpsBog-unsplash.jpg'
 tags: [SIFT, AI]
